apps/clusters/feathre-core/base-apps/bluemap/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bluemap
spec:
  parentRefs:
    - name: eg
      namespace: envoy
      sectionName: https
  hostnames:
    - bluemap.onelitefeather.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: bluemap
          port: 8100
